# QA

./: .env.example  .gitignore  .pre-commit-config.yaml  Makefile  README.md  conftest.py  docker-compose.test.yml  pyproject.toml  pytest.ini
.github/workflows/: ci.yml
docs/: TEST_COVERAGE_STRATEGY.md
qa_tests/: __init__.py  allure_utils.py  config.py  data_factory.py  fixtures.py  grpc_client.py  http_client.py  logging_utils.py  metrics.py  models.py  retry.py  ws_client.py
tests/: __init__.py  conftest.py  test_api_gateway.py  test_auth_flow.py  test_data_channel_health.py  test_data_channel_rest.py  test_health_user_service.py  test_me_user_service.py  test_notification_health.py  test_notification_rest.py  test_notification_websocket.py  test_openapi_contracts.py  test_operator_directory_health.py  test_operator_directory_rest.py  test_operator_pool_health.py  test_operator_pool_rest.py  test_operators_user_service.py  test_rate_limiting.py  test_search_health.py  test_search_rest.py  test_session_manager_health.py  test_session_manager_rest.py  test_sessions_user_service.py  test_streaming_health.py  test_streaming_sessions_rest.py  test_streaming_websocket.py  test_ticket_health.py  test_ticket_rest.py  test_users_user_service.py  test_validation_negative.py  test_video_session_realtime.py
